# imgalaxy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  apt.conf  docker-compose.yaml  pyproject.toml
docs/: resumen.tex
imgalaxy/: annotation.py  cfg.py  constants.py  datasets.py  download.py  helpers.py  lensing.py  lensing_poc.py  sweep.yaml  train.py  transform.py  unet.py
notebooks/: augmentedmodel.ipynb  poc.ipynb
