[tool.poetry]
name = "imgalaxy"
version = "0.1.0"
description = ""
authors = ["Jose Castagnino"]
packages = [{include = "imgalaxy"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
scikit-learn = "^1.4.0"
tensorflow-datasets = "^4.9.4"
python-decouple = "^3.8"
importlib-resources = "^6.1.1"
click = "^8.1.7"
matplotlib = "^3.8.2"
wandb = "^0.16.4"
# galaxies-datasets = {git="git@github.com:lbignone/galaxies_datasets.git", branch="galaxyzoo3d"}
tensorflow = "^2.16.1"
scikit-image = "^0.24.0"
install = "^1.3.5"
astropy = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
black = "^24.1.1"
ipython = "^8.21.0"
jupyter = "^1.0.0"
types-requests = "^2.31.0.20240125"
flake8 = "^7.0.0"
types-pyyaml = "^6.0.12.20240311"
nbclassic = "^1.1.0"
pylint = "^3.1.0"
plotly = "^5.22.0"
streamlit = "^1.36.0"

[tool.black]
line_length = 88
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = 'skip'

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pylint.master]
jobs = 0
 
[tool.pylint.'MESSAGES CONTROL']
ignored-modules = 'tensorflow.keras'
disable = [
  'C',
  'R',
  'fixme',
  'logging-format-interpolation',
  'logging-fstring-interpolation',
  'unspecified-encoding'
]

[tool.pylint.'FORMAT']
max-line-length = 88  # as in black

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
